src/objects/Closing_Report_Schedule__c.object
<CustomObject>
    <description>A schedule record is created for each day a Candidate is assigned to the Vacancy</description>
    <fields>
        <fullName>AM_Margin__c</fullName>
        <formula>IF( AND( Vacancy_Shift_Type__c = &quot;AM&quot;, PAYE_Umbrella__c = &quot;PAYE&quot;), 
(Charge_Rate__c -((Pay_Rate__c / 100 ) * 113)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Credit__c</fullName>
        <formula>Closing_Report__r.TR1__Candidate_Credit__r.FirstName &amp; &quot; &quot; &amp;  Closing_Report__r.TR1__Candidate_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Forecasted_GP__c</fullName>
        <formula>Forecasted_Gross_Profit__c *  Account_Manager_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Credit Forecasted GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Percentage__c</fullName>
        <formula>Closing_Report__r.TR1__Candidate_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCS__c</fullName>
        <description>Defines if the Closing Report Schedule is from a CCS Closing Report</description>
        <formula>TEXT(Closing_Report__r.CCS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Margin__c</fullName>
        <formula>IF(PAYE_Umbrella__c = &apos;PAYE&apos;, CF_PAYE_Margin__c,(Charge_Rate__c) - (Pay_Rate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_NICs__c</fullName>
        <formula>(IF(CF_Weekly_Pay__c - 175 &lt; 0, 0, CF_Weekly_Pay__c - 175)) * 0.1505</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF NICs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_PAYE_Margin__c</fullName>
        <formula>((5 * Charge_Rate__c) - (CF_Weekly_Pay__c * 0.005) - CF_Pension__c - CF_NICs__c - CF_Weekly_Pay__c) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF PAYE Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Pension__c</fullName>
        <formula>(IF(CF_Weekly_Pay__c - 120 &lt; 0, 0, CF_Weekly_Pay__c - 120)) * 0.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Pension</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Weekly_Pay__c</fullName>
        <formula>Pay_Rate__c * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Weekly Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSD_End_Time__c</fullName>
        <formula>Candidate_Availability__r.End_Date_Time__c</formula>
        <label>CSD End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSD_Start_Time__c</fullName>
        <formula>Candidate_Availability__r.Start_Date_Time__c</formula>
        <label>CSD Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <description>Date this shift was taken off</description>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Candidate_Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Availability</label>
        <referenceTo>Candidate_Availability__c</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>Closing_Report_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Branch__c</fullName>
        <formula>TEXT(Candidate_Availability__r.Candidate__r.Division__c )</formula>
        <label>Candidate Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <label>Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_Report__c</fullName>
        <label>Closing Report</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TR1__Closing_Report__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Consulting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>Closing_Report_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Daily_Margin__c</fullName>
        <formula>IF( AND( Vacancy_Shift_Type__c = &quot;Daily&quot;, NOT(PAYE_Umbrella__c = &quot;Umbrella&quot;)),
(Charge_Rate__c -(Pay_Rate__c * 1.13)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Exec_Senior_Credit__c</fullName>
        <formula>Closing_Report__r.TR1__Other2_Credit__r.FirstName &amp; &quot; &quot; &amp;  Closing_Report__r.TR1__Other2_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Exec_Senior_Forecasted_GP__c</fullName>
        <formula>Forecasted_Gross_Profit__c *  Development_Exec_Senior_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 Forecasted GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Exec_Senior_Percentage__c</fullName>
        <formula>Closing_Report__r.TR1__Other2_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecasted_Charge__c</fullName>
        <formula>Charge_Rate__c * Projected_Shifts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Projected Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Gross_Profit__c</fullName>
        <formula>Forecasted_Charge__c -  Forecasted_Shift_Pay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Shift_Pay__c</fullName>
        <formula>Pay_Rate__c *  Projected_Shifts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Projected Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Margin__c</fullName>
        <formula>IF( AND( Vacancy_Shift_Type__c = &quot;Hourly&quot;),
((Charge_Rate__c -(Pay_Rate__c))* Hours__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>(JSD_End_Time__c -  JSD_Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JSD_End_Time__c</fullName>
        <formula>Vacancy_Schedule__r.End_Date_Time__c</formula>
        <label>JSD End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JSD_Start_Time__c</fullName>
        <formula>Vacancy_Schedule__r.Start_Date_Time__c</formula>
        <label>JSD Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTimeTriggerExecuted__c</fullName>
        <label>LastTimeTriggerExecuted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leader_Principal_Credit__c</fullName>
        <formula>Closing_Report__r.TR1__Other_Credit__r.FirstName &amp; &quot; &quot; &amp;  Closing_Report__r.TR1__Other_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Principal_Forecasted_GP__c</fullName>
        <formula>Forecasted_Gross_Profit__c *  Leader_Principal_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit Forecasted GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leader_Principal_Percentage__c</fullName>
        <formula>Closing_Report__r.TR1__Other_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Total_Margin__c / Forecasted_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mgr_Head_of_Branch_Credit__c</fullName>
        <formula>Closing_Report__r.TR1__Marketing_Credit__r.FirstName &amp; &quot; &quot; &amp;  Closing_Report__r.TR1__Marketing_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mgr_Head_of_Branch_Percentage__c</fullName>
        <formula>Closing_Report__r.TR1__Marketing_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mgr_Head_of_Forecasted_GP__c</fullName>
        <formula>Forecasted_Gross_Profit__c *  Mgr_Head_of_Branch_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit Forecasted GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYE_Projected_Margin_NI1__c</fullName>
        <formula>CASE( Candidate_Availability__r.Candidate__r.Tax_Method__c,
&quot;PAYE&quot;,( Hourly_Margin__c + Daily_Margin__c + AM_Margin__c + PM_Margin__c),
&quot;&quot;,( Hourly_Margin__c + Daily_Margin__c + AM_Margin__c + PM_Margin__c),
0)</formula>
        <label>PAYE Projected Margin - NI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYE_Umbrella__c</fullName>
        <formula>TEXT( Candidate_Availability__r.Candidate__r.Tax_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAYE/Umbrella</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Margin__c</fullName>
        <formula>IF( AND( Vacancy_Shift_Type__c = &quot;PM&quot;, PAYE_Umbrella__c = &quot;PAYE&quot;), 
(Charge_Rate__c -((Pay_Rate__c / 100 ) * 113)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PR_CR__c</fullName>
        <formula>IF(Pay_Rate__c &gt; Charge_Rate__c, &quot;YES&quot;, &quot;NO&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR &gt; CR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pay Type Umbrella Or PAYE</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>Closing_Report_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Type__c</fullName>
        <label>Pay Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Margin_PAYE_Umbrella__c</fullName>
        <label>Payroll/Margin PAYE/Umbrella</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Placed_Id__c</fullName>
        <formula>Closing_Report__r.TR1__Person_Placed__c</formula>
        <label>Person Placed Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Placed__c</fullName>
        <formula>Closing_Report__r.TR1__Person_Placed__r.FirstName &amp; &quot; &quot; &amp;  Closing_Report__r.TR1__Person_Placed__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Placed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Shifts__c</fullName>
        <formula>IF(Vacancy_Shift_Type__c = &apos;Daily&apos;,1,
IF(Vacancy_Shift_Type__c = &apos;AM&apos;,0.5,
IF(Vacancy_Shift_Type__c = &apos;PM&apos;,0.5,
IF(Vacancy_Shift_Type__c = &apos;Hourly&apos;,0.1666666,
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Shifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_AM_Forcasted__c</fullName>
        <formula>Sales_Consultant_Forecasted_GP__c +  Account_Manager_Forecasted_GP__c</formula>
        <label>SC/AM Forcasted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_Credit__c</fullName>
        <formula>Closing_Report__r.TR1__Job_Credit__r.FirstName &amp; &quot; &quot; &amp;  Closing_Report__r.TR1__Job_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_Forecasted_GP__c</fullName>
        <formula>Forecasted_Gross_Profit__c  *  Sales_Consultant_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy Credit Forecasted GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_Percentage__c</fullName>
        <formula>Closing_Report__r.TR1__Job_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Past_Contract_End_Date__c</fullName>
        <description>If the schedule date is greater than closing report contract end date , it evaluates to true</description>
        <formula>IF(Schedule_Date__c &gt; Closing_Report__r.Contract_End_Date__c  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Past Contract End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_date_greater_CED__c</fullName>
        <formula>Schedule_Date__c  &gt;  Closing_Report__r.Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule date greater CED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedules_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedules Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
                <value>
                    <fullName>Extra Duties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stay_On_September_2014__c</fullName>
        <formula>TEXT ( Closing_Report__r.TR1__Person_Placed__r.Stay_On_September_2014__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stay On September 2014?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>Forecasted_Charge__c -   Forecasted_Shift_Pay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Days__c</fullName>
        <formula>IF(Vacancy_Shift_Type__c = &apos;Hourly&apos;,(0.1666666 * Hours__c), Projected_Shifts__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Projected Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Umbrella_Hourly__c</fullName>
        <formula>IF( AND( Vacancy_Shift_Type__c = &quot;Hourly&quot;),
((Charge_Rate__c -(Pay_Rate__c))* (Hours__c -1)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umbrella Hourly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Umbrella_Projected_Margin_NI__c</fullName>
        <formula>CASE( Candidate_Availability__r.Candidate__r.Tax_Method__c,
&quot;Umbrella&quot;, (Charge_Rate__c ) -(Pay_Rate__c ) +  Umbrella_Hourly__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umbrella Projected Margin - NI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vacancy_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy Schedule</label>
        <referenceTo>Vacancy_D2D__c</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>Closing_Report_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vacancy_Shift_Type__c</fullName>
        <formula>Text( Vacancy_Schedule__r.Shift__c )</formula>
        <label>Vacancy Shift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekEndDate__c</fullName>
        <formula>Schedule_Date__c - (CASE(MOD( Schedule_Date__c - DATE(1900, 1, 6), 7), 0, 
5, 1, 
6, 2, 
0, 3, 
1, 4, 
2, 5, 
3, 6, 
4,7)) + 6</formula>
        <label>WeekEndDate</label>
        <type>Date</type>
    </fields>
    <label>Closing Report Schedule</label>
    <nameField>
        <displayFormat>CRS-{0000000}</displayFormat>
        <label>CRS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closing Report Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>